force-app/main/default/objects/ASF_PriorityEmailAddressesByBU__mdt/ASF_PriorityEmailAddressesByBU__mdt.object-meta.xml
<CustomObject>
    <description>This is used when customer sends one email to multiple email addresses, then find out the priority Queue by email address configured on Email-To-Case and assign to right queue.</description>
    <label>ASF PriorityEmailAddressesByBU</label>
    <pluralLabel>ASF PriorityEmailAddressesByBU</pluralLabel>
</CustomObject>