force-app/main/default/objects/ASF_PriorityEmailAddressesByBU__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only Consider Active Configuration in Query</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>