force-app/main/default/objects/ASF_PriorityEmailAddressesByBU__mdt/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABFL</fullName>
            </value>
            <value>
                <fullName>ABHFL</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>ABSLIG</fullName>
            </value>
            <value>
                <fullName>ABML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>