force-app/main/default/objects/ASF_PriorityEmailAddressesByBU__mdt/fields/Case_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Case_Business_Unit__c</fullName>
    <label>Case Business Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>