force-app/main/default/objects/ASF_PriorityEmailAddressesByBU__mdt/fields/Case_LOB__c.field-meta.xml
<CustomField>
    <fullName>Case_LOB__c</fullName>
    <label>Case LOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>