force-app/main/default/objects/ASF_PriorityEmailAddressesByBU__mdt/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <label>Case Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Payments Email</fullName>
            </value>
            <value>
                <fullName>ABFL Email</fullName>
            </value>
            <value>
                <fullName>ABHFL Email</fullName>
            </value>
            <value>
                <fullName>ABFL WM CHAT</fullName>
            </value>
            <value>
                <fullName>ABWM Email</fullName>
            </value>
            <value>
                <fullName>ABSLI Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>