force-app/main/default/objects/ASF_PriorityEmailAddressesByBU__mdt/fields/Default_Queue_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Queue_Dev_Name__c</fullName>
    <description>This is developer name of queue to which case to be assigned</description>
    <label>Default Queue Dev Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>