force-app/main/default/objects/ASF_PriorityEmailAddressesByBU__mdt/fields/Email2CaseAddress__c.field-meta.xml
<CustomField>
    <fullName>Email2CaseAddress__c</fullName>
    <description>From Email-To-Case Routing Address</description>
    <label>Email2CaseAddress</label>
    <required>true</required>
    <type>Email</type>
</CustomField>