force-app/main/default/objects/ASF_PriorityEmailAddressesByBU__mdt/fields/Priority_Index__c.field-meta.xml
<CustomField>
    <fullName>Priority_Index__c</fullName>
    <label>Priority Index</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>