force-app/main/default/objects/ASF_PriorityEmailAddressesByBU__mdt/fields/Send_to_EBOT__c.field-meta.xml
<CustomField>
    <fullName>Send_to_EBOT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Based on the Checkbox, it will take a decision whether any email received on this email box to be forwarded for EBot Categorisation or not.</description>
    <label>Send to EBOT</label>
    <type>Checkbox</type>
</CustomField>