force-app/main/default/objects/ASF_PriorityEmailAddressesByBU__mdt/fields/Send_to_UNFYD__c.field-meta.xml
<CustomField>
    <fullName>Send_to_UNFYD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created to validate if the case details need to be sent to UNFYD</description>
    <label>Send to UNFYD</label>
    <type>Checkbox</type>
</CustomField>