force-app/main/default/objects/ASF_PriorityEmailAddressesByBU__mdt/listViews/ABHI.listView-meta.xml
<ListView>
    <fullName>ABHI</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Case_Business_Unit__c</columns>
    <columns>Case_Origin__c</columns>
    <columns>Default_Queue_Dev_Name__c</columns>
    <columns>Email2CaseAddress__c</columns>
    <columns>Priority_Index__c</columns>
    <columns>Send_to_EBOT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>ABHI</value>
    </filters>
    <label>ABHI</label>
</ListView>